--- a/src/components/Form/Form.css
+++ b/src/components/Form/Form.css
@@ -14,3 +14,21 @@
     background-color: rgb(0, 167, 245) !important;
     color: white !important;
 }
+
+@media (max-width:650px){
+    td{
+        font-size: 12px;
+    }
+    .MuiButton-label{
+        font-size: 9px !important;
+    }
+    .FormContainer{
+        background-color: rgb(223, 223, 223);
+        padding: 5px;
+    }
+}
+@media (max-width:350px){
+    td{
+        font-size: 10px;
+    }
+}
