--- a/src/components/FormMid/FormMid.css
+++ b/src/components/FormMid/FormMid.css
@@ -2,6 +2,7 @@
     background-color: white;
     margin: 10px 0;
     padding-bottom: 30px;
+    border-radius: 7px;
 }
 .FormmidHeader{
     display: flex;
@@ -14,7 +15,7 @@
     justify-content: space-between;
 }
 .BundleContainer{
-    height: 320px;
+    max-height: 320px;
     overflow-y: scroll;
     display: flex;
     flex-direction: column;
@@ -30,11 +31,80 @@
     -ms-overflow-style: none;  /* IE and Edge */
     scrollbar-width: none;  /* Firefox */
   }
+.special::-webkit-scrollbar {
+    display: none;
+  }
+  
+.special {
+    -ms-overflow-style: none;  /* IE and Edge */
+    scrollbar-width: none;  /* Firefox */
+  }
 .SaveBundleBtn{
-    width: 400px !important;
+    width: 400px;
     margin-top: 15px !important;
     background-color: rgb(0, 167, 245) !important;
     color: white !important;
 
 }
+.special{
+    display: none;
+}
 
+@media (max-width:1350px ){
+    
+    .SaveBundleBtn{
+        width: 300px;
+    }
+    .FormmidHeader{
+        display: flex;
+        justify-content: left;
+        width: 300px;
+    }
+}
+@media (max-width:1150px ){
+    .BundleContainer{
+        display: none;
+    }
+    .MidInputContainers{
+        display: flex;
+        flex-direction: column;
+    }
+    .SaveBundleBtn{
+    width: 300px !important;
+
+    }
+    .special{
+        display: flex;
+        max-height: 330px;
+        overflow-y: scroll;
+    }
+    .special > td {
+        margin-right: 0;
+    }
+    
+}
+
+@media (max-width:650px){
+    .FormmidHeader{
+        justify-content: center;
+        font-size: 11px;
+    }
+    .SaveBundleBtn{
+        width: 200px !important;
+    
+    }
+    .FormmidHeader{
+        display: flex;
+        justify-content: center;
+        width: 200px;
+        margin-right: 70px;
+    }
+}
+@media (max-width:350px){
+    .FormmidHeader{
+        display: flex;
+        justify-content: center;
+        width: 200px;
+        margin-right: 50px;
+    }
+}
